tests/rosetta/out/Haskell/call-a-foreign-language-function.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/call-a-foreign-language-function.hs:45:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/call-a-foreign-language-function.hs:37:1
                 /workspace/mochi/tests/rosetta/out/Haskell/call-a-foreign-language-function.hs:45:1
   |
45 | main = do
   | ^^^^
